--- a/config/database.yml
+++ b/config/database.yml
@@ -83,6 +83,8 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: ledger_account_production
   username: ledger_account
-  password: <%= ENV["LEDGER_ACCOUNT_DATABASE_PASSWORD"] %>
+  password: 789456123
