--- a/config/database.yml
+++ b/config/database.yml
@@ -24,9 +24,7 @@ default: &default
 development:
   <<: *default
   database: ledger_account_development
-  username: melanie
-  encoding: unicode
-  password:
+
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -83,6 +81,7 @@ test:
 #
 production:
   <<: *default
-  database: <%= ENV["LEDGER_DATABASE"] %>
+  adapter: postgresql
+  encoding: unicode
+  database: ledger_account_production
   username: ledger_account
-  password: <%= ENV["LEDGER_ACCOUNT_DATABASE_PASSWORD"] %>
